DFG should not always speculate that a ByVal access has an integer index https://bugs.webkit.org/show_bug.cgi?id=69716

Reviewed by Oliver Hunt.

1% win on SunSpider, neutral elsewhere.

* dfg/DFGJITCodeGenerator.h:
(JSC::DFG::callOperation):
* dfg/DFGNode.h:
* dfg/DFGOperations.cpp:
* dfg/DFGOperations.h:
* dfg/DFGPropagator.cpp:
(JSC::DFG::Propagator::byValHasIntBase):
(JSC::DFG::Propagator::clobbersWorld):
(JSC::DFG::Propagator::getMethodLoadElimination):
(JSC::DFG::Propagator::checkStructureLoadElimination):
(JSC::DFG::Propagator::getByOffsetLoadElimination):
(JSC::DFG::Propagator::getPropertyStorageLoadElimination):
(JSC::DFG::Propagator::performNodeCSE):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):



Canonical link: https://commits.webkit.org/85775@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@97030 268f45cc-cd09-0410-ab3c-d52691b4dbfc